--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
+<img src="avt2.jpg" />
 <br>
-<br>
-<br>
-<div id="loading"> LOADING</div>
+<div id="loading"> WARNING </div>
 <br/>
 <p class="test">
    ĐỊT MẸ CÁC EM CỐ LÊN SẮP BIẾT NGUỒN CỦA ANH RỒI !
